--- a/gb/24/7/13/n14290118.md
+++ b/gb/24/7/13/n14290118.md
@@ -11,7 +11,6 @@
 <p>“特工护送川普离开，他挥舞着（招牌式）拳头，”消息补充道。</p>
 <p>从现场视频看，在子弹声响起后，川普用右手似乎抚摸头部，随后卧倒在讲台下。特勤局特工匆忙赶到舞台，并将他护送离开。</p>
 <p>事件发生在他登上集会讲台后不久。</p>
-</p>
 <p><center><a title="Shots Fired at Trump Rally in Butler, Pennsylvania" src="https://www.ganjingworld.com/embed/1gt526j31t52vHaBSVmhfLdMZ1pn1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <h2>要点：</h2>
 <p><strong><ahref="#_Toc2024071301">川普：子弹穿透右耳上部 听到嗖嗖的枪声</a></strong><br />
@@ -22,6 +21,7 @@
 <p>以下为实时更新。</p>
 <h2>消息：嫌犯是一名宾州20岁男子</h2>
 <p>美东时间晚11:30，CNN报道说，联邦调查局已经确定了嫌疑人的身份。但嫌疑人的名字尚未公布，消息人士称，嫌疑人是一名来自宾夕法尼亚州的20岁男子。</p>
+<p>联邦调查局已正式认定这是一起针对川普的暗杀未遂事件。联邦调查局特工凯文·罗杰克（Kevin Rojek）在宾夕法尼亚州巴特勒举行的新闻发布会上表示，他们即将确定枪手的身份。</p>
 <h2>急诊室医生现场帮助救治一名受害者</h2>
 <p>一位衬衫上沾满鲜血的目击者接受CBS采访时透露，他是一名急诊室医生，有在集会现场对一名头部受伤的伤者进行心肺复苏术。</p>
 <p>“我听到了枪声。我以为是鞭炮声，”他说。“然后那边有人尖叫着喊，他中枪了。”</p>
@@ -38,7 +38,6 @@
 <h2>众议院计划举行听证会</h2>
 <p>特勤局已同意向众议院监督委员会通报今晚川普集会枪击事件的情况。</p>
 <p>该委员会还计划就此事件举行听证会，并传唤特勤局局长出庭作证。</p>
-<p><a name="_oc2024071304"></a></p>
 <h2>警方：枪手在一栋办公楼屋顶上 在安全范围以外</h2>
 <p>巴特勒县地方检察官理查德·戈尔丁格（Richard Goldinger ）说，枪手在一栋办公楼的屋顶上，该办公楼不在集会活动的安全范围之内。他没有透露跟枪手身份有关的任何细节。</p>
 <p>距离川普集会最近的一栋建筑属当地的一家名为AGR International的制造业公司。</p>
@@ -46,6 +45,7 @@
 <h2>消息：枪手使用AR步枪 从逾200英尺外射击</h2>
 <p>CBS新闻引述执法部门的消息说，嫌疑人用AR式步枪在200-300英尺外朝川普射击。</p>
 <p>执法部门消息人士称，枪手当时待在特勤局设立的安全警戒线外的一个棚屋顶上。</p>
+</p>
 <p>&nbsp;</p>
 <blockquote class="twitter-tweet">
 <p dir="ltr" lang="en">Our former President showed tremendous grace and courage under literal fire tonight. So thankful for his safety and so sad for the victims and their families.</p>
@@ -62,6 +62,7 @@
 <p>美国联邦调查局在一份声明说，他们已负责调查此案，承担主要联邦执法机构的角色，调查今天早些时候在宾州巴特勒发生的针对前总统川普的事件。</p>
 <p>声明说，“FBI匹兹堡办公室的特工，包括危机应急团队和证据应急技工都有快速反应。我们将继续提供全部资源支持这项调查，并与美国特情局和州及当地执法部门合作。”</p>
 <p>FBI呼吁知情民众拨打电话提供更多信息。</p>
+<p><a name="_oc2024071304"></a></p>
 <h2>川普竞选团队：期待与民众相聚密尔沃基大会</h2>
 <p>根据川普竞选团队和共和党全国委员会发出的一份联合声明，川普期待与民众一起参加密尔沃基（Milwaukee）共和党全国代表大会，提名他担任美国第47任总统。</p>
 <p>共和党将于7月15日在密尔瓦基举行全国代表大会，正式提名党内候选人。</p>
@@ -75,6 +76,7 @@
 <p>目击者加里·奥多诺霍（Gary O&#8217;Donoghue）告诉英国BBC，他在川普发表讲话大约“五到七分钟”后，看到一名男子带着步枪爬上了旁边的一处屋顶。</p>
 <p>他说：“我们注意到一个男人爬上……在我们旁边建筑物的屋顶上，距离我们50英尺。</p>
 <p>“我们指着爬上屋顶的那个人，”他描述了当时他和朋友们试图提醒执法人员注意该男子。</p>
+</p>
 <p><center><a title="突发：川普宾州集会中枪，特勤局称川普安全，枪手已毙，现场采访（2）｜ #新唐人电视台" src="https://www.ganjingworld.com/zh-TW/embed/1gt59oobe5k7DG4ryEmMB5OY71iv1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <p>大纪元姐妹媒体新唐人电视台记者在现场采访，多位民众表示，他们看到了枪手藏身的地方。</p>
 <p>CBS援引两名执法部门的消息人士的话称，袭击者手持步枪，站在集会现场被封锁的区域外，距离川普大约180米。</p>
@@ -85,7 +87,7 @@
 <p>川普在声明中说：“我感谢美国特勤局、所有执法部门对刚刚在宾州巴特勒枪击事件的迅速反应。最重要的是，我要向在集会中遇难者的家人、以及另一名重伤者的家人表示哀悼。</p>
 <p>“在我们国家发生这样的事情真是难以置信。</p>
 <p>“目前（我们）对枪手的信息一无所知，他已经死亡。我被一颗子弹击中，子弹穿透了我的右耳上部。我立即意识到出了问题，因为我听到了嗖嗖声、枪声，并立即感觉到子弹撕裂皮肤的痛感。我流了很多血，所以我当时就意识到发生了什么。上帝保佑美国！”</p>
-<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://dol9bue5bysdj.cloudfront.net/L2bpozeZv"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
+<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://d7b58bkqqk9ju.cloudfront.net/Y6npozeZg"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
 <p>— Anthony Guglielmi (@SecretSvcSpox) <ahref="https://twitter.com/SecretSvcSpox/status/1812288378596982908?ref_src=twsrc%5Etfw">July 14, 2024</a></p></blockquote>
 <h2>特勤局声明：枪手被击毙 造成1死3伤</h2>
 <p>美国特勤局通讯主管安东尼·古列尔米（Anthony Guglielmi）在美东时间晚9点发出声明称，枪手被特勤局击毙，造成1死3伤。</p>
@@ -141,8 +143,12 @@
 <p>以色列总理本雅明·内塔尼亚胡说：“萨拉和我对川普总统的显然遭遇袭击感到震惊。我们为他的安全和快速康复祈祷。”</p>
 <p>洪都拉斯总统西奥马拉·卡斯特罗·德·塞拉亚<span class="s1">（</span><span class="s2">Xiomara Castro de Zelaya</span><span class="s1">）</span>说：“暴力会引发更多暴力。我对美国选举过程中发生的事情感到遗憾，（我）与川普总统团结一致。”</p>
 <p>匈牙利总理维克多·奥尔班：“在这黑暗时刻，我的思想和祈祷与川普总统同在。”</p>
+</p>
+<p>&nbsp;</p>
+<blockquote class="twitter-tweet">
 <p dir="ltr" lang="en">An incident occurred the evening of July 13 at a Trump rally in Pennsylvania. The Secret Service has implemented protective measures and the former President is safe. This is now an active Secret Service investigation and further information will be released when available.</p>
 <p>— Anthony Guglielmi (@SecretSvcSpox) <ahref="https://twitter.com/SecretSvcSpox/status/1812256378616201726?ref_src=twsrc%5Etfw">July 13, 2024</a></p></blockquote>
+<p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <h2>特勤局：川普是安全的</h2>
 <p>美国特勤局通讯主管安东尼·古列尔米（Anthony Guglielmi）称，川普是安全的。</p>
 <p>古列尔米在一份声明中说：“7月13日晚，在宾州的川普集会上发生了一起（枪击）事故。特勤局已实施保护措施，前总统是安全的。特勤局目前正在积极调查此事，如有进一步信息，我们将及时发布。”</p>
@@ -157,14 +163,14 @@
 <p>佛罗里达州另一位联邦参议员里克·斯科特（Rick Scott）说，“这显然是对川普总统的暗杀企图。我很高兴他看起来没事，我为他和所有参加集会的人祈祷。（我们）对暴力零容忍。我希望这个妖魔（Monster）已经被抓住并受到法律的最大程度的起诉。”</p>
 <p>责任编辑：孙芸#</p>
 	
-
+<hr>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289801.md#1">消息：马斯克向川普竞选团队捐款</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289911.md#1">美国大选前 Meta取消川普脸书与IG限制</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290278.md#1">学生改性别须瞒家长 南加律师疾呼拦下危险法案</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290275.md#1">父亲遇袭 四子女发声明 川普：我永不投降</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290252.md#1">川普期待参加共和党大会 据报他已出院</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/6/n9929355.md#1" target="_blank">尹曙生：触目惊心的杀人运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/7/n11574300.md#1" target="_blank">他们为我们的生活带来光明（2）</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
@@ -187,5 +193,6 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
+<hr>
 <strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/7/13/n14290118.htm">【更新】川普宾州集会右耳中枪 枪手被击毙</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290118.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
